--- a/Cooxi/Content/Site.css
+++ b/Cooxi/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 35px;
     padding-bottom: 20px;
 }
 
@@ -39,4 +39,31 @@ input[type="checkbox"].input-validation-error {
 
 .validation-summary-valid {
     display: none;
+}
+
+.navbar {
+    min-height:28px !important;
+}
+
+.inner-addon {
+    position: relative;
+}
+
+.inner-addon .glyphicon {
+    position: absolute;
+    padding: 10px;
+    pointer-events: none;
+}
+
+.right-addon .glyphicon {right: 0px;}
+.left-addon .glyphicon {left: 0px;}
+
+.left-addon input {padding-left: 30px; }
+.right-addon input {padding-right: 30px; }
+
+.navbar-nav > li > a {padding-top:5px !important; padding-bottom:5px !important;}
+.navbar {min-height:32px !important}
+.cooxi-logo {
+    width: 159px;
+    height: auto;
 }
