--- a/Cooxi/Views/Shared/_LoginPartial.cshtml
+++ b/Cooxi/Views/Shared/_LoginPartial.cshtml
@@ -4,16 +4,16 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-            </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+            <li>@Html.ActionLink("dodaj przepis", "Create", "Recipe", routeValues: null, htmlAttributes: new { id = "add-recipe-link" })</li>
+            <li>@Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a></li>
         </ul>
     }
 }
 else {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("dodaj przepis", "Create", "Recipe", routeValues: null, htmlAttributes: new { id = "add-recipe-link" })</li>
+        <li>@Html.ActionLink("załóż konto", "Register", "Account", routeValues: null, htmlAttributes: new { id = "register-link" })</li>
+        <li>@Html.ActionLink("zaloguj", "Login", "Account", routeValues: null, htmlAttributes: new { id = "login-link" })</li>
     </ul>
 }
