--- a/Cooxi/Views/Shared/_LoginPartial.cshtml
+++ b/Cooxi/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" })) {
         @Html.AntiForgeryToken()
 
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="user-bar-options-list">
             <li>@Html.ActionLink("dodaj przepis", "Create", "Recipe", routeValues: null, htmlAttributes: new { id = "add-recipe-link" })</li>
             <li>@Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a></li>
@@ -11,7 +11,7 @@
     }
 }
 else {
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="user-bar-options-list">
         <li>@Html.ActionLink("dodaj przepis", "Create", "Recipe", routeValues: null, htmlAttributes: new { id = "add-recipe-link" })</li>
         <li>@Html.ActionLink("załóż konto", "Register", "Account", routeValues: null, htmlAttributes: new { id = "register-link" })</li>
         <li>@Html.ActionLink("zaloguj", "Login", "Account", routeValues: null, htmlAttributes: new { id = "login-link" })</li>
