Add recipe using jQuery without validation

--- a/Cooxi/Views/Recipes/Create.cshtml
+++ b/Cooxi/Views/Recipes/Create.cshtml
@@ -1,88 +1,95 @@
 ﻿@model Cooxi.Models.Recipe
-
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Dodaj przepis";
 }
 
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Recipe</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+<div class="panel panel-default">
+    <div class="panel-body">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <div class="create-recipe-header">
+                <h2><b>DODAJ PRZEPIS</b></h2>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PrepareDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PrepareDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PrepareDescription, "", new { @class = "text-danger" })
+            <hr />
+            <div id="insta-photos">
+                <ul id="insta-photos-list"></ul>
             </div>
-        </div>
+            
+            <div id="recipe-container" class="form-horizontal hidden">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Name, "Tytuł przepisu *", new { @class = "control-label col-md-3" })
+                    <div class="col-md-9">
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @id = "recipe-name-input" } })
+                        @Html.ValidationMessageFor(model => model.Name, "Proszę wprowadzić nazwę przepisu", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Ingredients, "Składniki *", new { @class = "control-label col-md-3" })
+                    <div id="ingredients-container" class="col-md-9">
+                        <div class="input-group adding-ingredient-input-group">
+                            <input type="text" id="adding-ingredient-name" placeholder="Nazwa składnika..." class="form-control">
+                            <input type="text" id="adding-ingredient-count" placeholder="Ilość" class="form-control">
+                            <select id="adding-measure-units-select" class="form-control">
+                                <option>gram</option>
+                                <option>litrów</option>
+                            </select>
+                            <a id="add-ingredient">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </a>
+                        </div>
+                        <ol id="ingredients-list"></ol>
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Name, "Sposób przygotowania *", new { @class = "control-label col-md-3" })
+                    <div class="col-md-9">
+                        @Html.TextAreaFor(model => model.PrepareDescription, new { @class = "form-control", @rows = "5", @id = "prepare-description-textarea" })
+                        @Html.ValidationMessageFor(model => model.Name, "Proszę wprowadzić opis przygotowania", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ImagePath, "Zdjęcie potrawy *", new { @class="control-label col-md-3"})
+                    <div class="col-md-9">
+                        <a href="#" class="thumbnail custom-image">
+                            <img src="~/Content/img-placeholder.png" alt="image-placeholder.png" width="200" height="100"/>
+                        </a>
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model =>model.Note, "Notka", new { @class="control-label col-md-3"})
+                    <div class="col-md-9">
+                        @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ServingFor, "Liczba porcji *", new { @class = "control-label col-md-3" })
+                    <div class="col-md-9">
+                        @Html.EditorFor(model => model.ServingFor, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Difficulty, "Trudność *", new { @class = "control-label col-md-3" })
+                    <div class="col-md-9">
+                        @Html.EnumDropDownListFor(model => model.Difficulty, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Difficulty, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.MealType, "Typ dania *", new { @class = "control-label col-md-3" })
+                    <div class="col-md-9">
+                        @Html.EnumDropDownListFor(model => model.MealType, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.MealType, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ImagePath, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ImagePath, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Dodaj przepis" class="btn btn-success" />
+                        <input type="submit" value="Anuluj" class="btn btn-danger" />
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ServingFor, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ServingFor, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ServingFor, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Difficulty, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Difficulty, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Difficulty, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.MealType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.MealType, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MealType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+        }
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
