--- a/Cooxi/Views/Shared/_Layout.cshtml
+++ b/Cooxi/Views/Shared/_Layout.cshtml
@@ -9,13 +9,14 @@
 
 </head>
 <body>
+@Html.Partial("_addRecipeModal")
     <div class="row user-bar">
         <div class="container">
             <ul class="user-bar-admin-options-list hidden">
                 @if (Request.IsAuthenticated && User.IsInRole("Admin"))
                 {
                     <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
-                        <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
+                            <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
                 }
             </ul>
             @Html.Partial("_LoginPartial")
@@ -26,32 +27,30 @@
             @Html.Partial("_SearchPartial")
         </div>
     </div>
-    <div class="row main-nav">
-        <div class="container">
-            @Html.Partial("_NavigationPartial")
-        </div>
-    </div>
-    <div class="row main-body">
-        <div class="container">
-        <div class="col-md-2 left-menu">
-            @Html.Partial("_SideBar")
-        </div>
-        <div class="col-md-10 page-body">
+    @*<div class="row main-nav">
+            <div class="container">
+                @Html.Partial("_NavigationPartial")
+            </div>
+        </div>*@
+    <div class="row">
+        <div id="main-body" class="container">
             @RenderBody()
         </div>
-            </div>
     </div>
 
     <div class="container body-content">
-        
+
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Cooxi by Mateusz Woźniak</p>
         </footer>
     </div>
 
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/create-recipe")
+    @Scripts.Render("~/bundles/instagram")
     @RenderSection("scripts", required: false)
 </body>
 </html>
