--- a/Cooxi/Views/Shared/_SearchPartial.cshtml
+++ b/Cooxi/Views/Shared/_SearchPartial.cshtml
@@ -14,9 +14,9 @@
             </span>
         </div>
     </div>
-    <div class="col-md-2">
+    @*<div class="col-md-2">
         <div class="cookbook-button-wrapper">
             <button class="btn btn-default btn-lg btn-warning btn-cookbook"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>   Twója książka</button>
         </div>
-    </div>
+    </div>*@
 </div>
